# three-source-dwh

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
dags/: bonussystem-sync-dag.py  dataobjs.py  errors.py  init-dwh-dag.py  init-dwh.py  load-cdm-dag.py  load-dds-dwh-dag.py  load-stg-dwh-dag.py  main.py  objs.py  sync-dwh-dag.py  utils.py
dags/sql/: dwh-init-ddl.sql  init-dwh-ddl.sql
dev/: main.py
pkg/: errors.py  main.py  objs.py  tasks.py  utils.py
sql/: init-dwh-ddl.sql
